Changelog
=========

1.4.7 (unreleased)
------------------


1.4.6 (2011-10-19)
------------------

* Add Spanish translation.
  [davisagli]

1.4.5 (2011-10-19)
------------------

* Make sure wizard step labels are translated.
  [davisagli]

1.4.4 (2011-10-17)
------------------

* Avoid using any() to restore compatibility with Python 2.4.
  [davisagli]

1.4.3 (2011-07-13)
------------------

* Don't count browser views when determining if the user has left the
  wizard.
  [davisagli]

1.4.2 (2011-05-04)
------------------

* Fix AutoWizard widget traverser registration.
  [elro]

1.4.1 (2011-05-04)
------------------

* Add an AutoWizard for use with plone.autoform.
  [elro]

* Add a Clear button that clears the session and goes back to step 1.
  [elro]

* Reorder buttons so Finish and Continue both appear before Back.
  [elro]

1.4 (2011-05-04)
----------------

* Remove <hr />
  [elro]

* Use Products.statusmessages.
  [elro]

* Tweak wizard-buttons to conform to standard plone formControls.
  [elro]

* Remove div.row from wizard-step.pt.
  [elro]

1.3.3 (2011-03-22)
------------------

* Normalize @@ view prefix when comparing URLs.
  [davisagli]

1.3.2 (2010-07-27)
------------------

* Remove stray debugging statement.
  [khink]

1.3.1 (2010-06-28)
------------------

* Avoid clobbering the session during plone.app.z3cform's inline validation.
  [davisagli]

1.3 (2010-06-23)
----------------

* Avoid errors when plone.app.z3cform's inline validation is installed.
  [davisagli]

1.2 (2010-04-08)
----------------

* Added a GroupStep for GroupForm-like integration.
  [vangheem]

1.1 (2010-03-01)
----------------

* Make sure that the Next button is the default if a step is submitted by
  pressing enter.

1.0 (2010-01-19)
----------------

* Include the form's enctype in the form tag.

* Don't clear the session when traversing over the form to other things (such
  as a widget).

1.0b2 (2009-06-25)
------------------
