@@ -30,6 +30,7 @@
         tal:define="form nocall:view/currentStep"
         tal:attributes="action request/getURL;
                         enctype form/enctype;
+                        id form/cssid;
                         class python:'rowlike enableUnloadProtection kssattr-formname-%s' % request.getURL().split('/')[-1]">
     <tal:form define="form nocall:view/currentStep">
       <h2 tal:condition="form/label" tal:content="form/label">
