@@ -66,7 +66,7 @@ class Step(utils.OverridableTemplate, form.Form):
     subforms = ()
     label = u""
     description = u""
-    
+    cssid = u""
     wizard = None
     completed = True
 
@@ -132,6 +132,7 @@ class Wizard(utils.OverridableTemplate, form.Form):
     currentStep = None
     currentIndex = None
     finished = False
+    validate_back = True
 
     @property
     def sessionKey(self):
@@ -253,17 +254,24 @@ class Wizard(utils.OverridableTemplate, form.Form):
     def handleBack(self, action):
         messages = IStatusMessage(self.request)
         data, errors = self.currentStep.extractData()
-        if errors:
-            self.status = self.formErrorsMessage
-            messages.addStatusMessage(self.status, type="error")
-        else:
-            self.currentStep.applyChanges(data)
+                
+        if self.validate_back == False:
+            # If 'validate_back' is False, skip the error handling
+            # and abandon the data for this Step
             self.updateCurrentStep(self.currentIndex - 1)
-            
-            # Back can change the conditions for the finish button,
-            # so we need to reconstruct the button actions, since we
-            # do not redirect.
             self.updateActions()
+        else:
+            if errors:
+                self.status = self.formErrorsMessage
+                messages.addStatusMessage(self.status, type="error")
+            else:
+                self.currentStep.applyChanges(data)
+                self.updateCurrentStep(self.currentIndex - 1)
+                
+                # Back can change the conditions for the finish button,
+                # so we need to reconstruct the button actions, since we
+                # do not redirect.
+                self.updateActions()
 
     def showClear(self):
         values = [v for v in self.session.values() if isinstance(v, dict)]
