@@ -3,7 +3,13 @@ Changelog
 
 1.4.7 (unreleased)
 ------------------
+* Add ability to skip validation of current input if the user
+  uses the Back button.  Default remains unchanged.
+  [spanky]
 
+* Add "cssid" attribute to Steps to allow the developer to specify
+  a string to be used as the ID of the form tag
+  [spanky]
 
 1.4.6 (2011-10-19)
 ------------------
